objects/Review_Approver__c.object
<CustomObject>
    <description>Object used to store data for Code Review approver for User Story</description>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Comments when the change is requested or rejected PR</description>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Review_Status__c</fullName>
        <description>Status of the review for particular Reviewer</description>
        <label>Review Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>In-Progress</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Change Requested</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Person who will be reviewing the code</description>
        <inlineHelpText>The Person who will be reviewing the code</inlineHelpText>
        <label>Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Review_Approvers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User_Story__c</fullName>
        <description>Stores the User story for the approver</description>
        <inlineHelpText>Stores the User story for the approver</inlineHelpText>
        <label>User Story</label>
        <referenceTo>copado__User_Story__c</referenceTo>
        <relationshipLabel>Review Approvers</relationshipLabel>
        <relationshipName>Review_Approvers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Review Approver</label>
    <nameField>
        <label>Review Approvers Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Review Approvers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Only_reviewer_can_update_the_status</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
 ISCHANGED( Review_Status__c ),
  Reviewer__c   &lt;&gt;  $User.Id 
)</errorConditionFormula>
        <errorDisplayField>Review_Status__c</errorDisplayField>
        <errorMessage>Only reviewer can change the status of the record</errorMessage>
    </validationRules>
</CustomObject>